--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Bài tập toán tử điều kiện - KhoaLVD</title>
   </head>
   <body>
-    <section class="max-w-screen-xl mx-auto p-4">
+    <section class="max-w-screen-xl mx-auto p-4 mt-8 border-2 rounded-md">
       <h2>Kiểm tra số dương</h2>
       <h3>Vui lòng nhập số:</h3>
       <input
@@ -27,7 +27,7 @@
       </button>
       <div id="ketQuaSoDuong"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Kiểm tra tuổi học sinh</h2>
       <h3>Vui lòng nhập số tuổi:</h3>
       <input
@@ -43,7 +43,7 @@
       </button>
       <div id="ketQuaSoTuoi"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Kiểm tra số chẵn hay lẻ</h2>
       <h3>Vui lòng nhập số:</h3>
       <input
@@ -59,7 +59,7 @@
       </button>
       <div id="ketQuaChanHayLe"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Kiểm tra độ tuổi lái xe</h2>
       <h3>Vui lòng nhập số tuổi:</h3>
       <input
@@ -75,11 +75,11 @@
       </button>
       <div id="ketQuaLaiXe"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Xét thưởng nhân viên</h2>
       <h3>Vui lòng nhập doanh thu (triệu đồng):</h3>
       <input type="number" id="doanhThu" class="border-gray-300 rounded-lg" />
-      <h3>Vui lòng nhập số sản phẩm nhân viên bán được:</h3>
+      <h3 class="mt-4">Vui lòng nhập số sản phẩm nhân viên bán được:</h3>
       <input
         type="number"
         id="sanPham"
@@ -93,7 +93,7 @@
       </button>
       <div id="ketQuaThuong"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Tính chiết khấu</h2>
       <h3>Vui lòng nhập số tiền mua hàng (đô):</h3>
       <input
@@ -109,7 +109,7 @@
       </button>
       <div id="ketQuaChietKhau"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 border-2 rounded-md">
       <h2>Kiểm tra mật khẩu</h2>
       <h3>Vui lòng nhập mật khẩu:</h3>
       <input
@@ -125,7 +125,7 @@
       </button>
       <div id="ketQuaMatKhau"></div>
     </section>
-    <section class="max-w-screen-xl mx-auto p-4 mt-16">
+    <section class="max-w-screen-xl mx-auto p-4 mt-16 mb-8 border-2 rounded-md">
       <h2>Kiểm tra khoảng điểm</h2>
       <h3>Vui lòng nhập điểm:</h3>
       <input
